<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg">

    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/layout_btns"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_gw_title"
            android:text="@string/lbl_driver"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_btns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_header">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_bad_address"
                android:layout_width="@dimen/width_delivery_btn"
                android:layout_height="@dimen/height_delivery_btn"
                android:layout_marginRight="@dimen/margin_right_delivery_btn"
                android:background="@color/btn"
                android:text="@string/btn_bad_address"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_delivery_btn" />

            <Button
                android:id="@+id/button_refused"
                android:layout_width="@dimen/width_delivery_btn"
                android:layout_height="@dimen/height_delivery_btn"
                android:background="@color/btn"
                android:text="@string/btn_refused"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_delivery_btn" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_delivery_btn"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_closed"
                android:layout_width="@dimen/width_delivery_btn"
                android:layout_height="@dimen/height_delivery_btn"
                android:layout_marginRight="@dimen/margin_right_delivery_btn"
                android:background="@color/btn"
                android:text="@string/btn_closed"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_delivery_btn" />

            <Button
                android:id="@+id/button_damage"
                android:layout_width="@dimen/width_delivery_btn"
                android:layout_height="@dimen/height_delivery_btn"
                android:background="@color/btn"
                android:text="@string/btn_damage"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_delivery_btn" />
        </LinearLayout>

        <Button
            android:id="@+id/button_pod"
            android:layout_width="@dimen/width_delivery_btn"
            android:layout_height="@dimen/height_delivery_btn"
            android:layout_marginTop="@dimen/margin_top_delivery_btn"
            android:background="@color/btn"
            android:text="@string/btn_pod"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_delivery_btn" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>